FIX gap not working mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -169,7 +169,9 @@ body {
       padding-bottom: 1rem;
       .generated {
         margin-bottom: 1rem;
+
         .header-gen {
+          gap: 0;
           .photo {
             img {
               height: 8vh;
